add powerdemand of main components in response object add ClutchInfo Interface add Breaks (also to PowertrainBuilder)
Vehicle stopping and drive off again works!

--- a/VectoCore/VectoCore.csproj
+++ b/VectoCore/VectoCore.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Models\SimulationComponent\Impl\Breaks.cs" />
     <Compile Include="Models\SimulationComponent\Impl\EngineOnlyCombustionEngine.cs" />
     <Compile Include="Models\SimulationComponent\Impl\MappingAuxiliaryData.cs" />
+    <Compile Include="Models\Simulation\DataBus\IClutchInfo.cs" />
     <Compile Include="Models\Simulation\Data\AuxiliaryDemandType.cs" />
     <Compile Include="Models\SimulationComponent\Data\AuxiliaryType.cs" />
     <Compile Include="Models\SimulationComponent\Data\GearFullLoadCurve.cs" />
