--- a/VectoCoreTest/app.config
+++ b/VectoCoreTest/app.config
@@ -25,14 +25,18 @@
 	<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 		<targets>
 			<target xsi:type="Console" name="ConsoleLogger" error="true" />
-			<target xsi:type="File" name="LogFile" filename="${basedir}/logs/log.txt"
+			<target xsi:type="File" name="LogFile" filename="${basedir}/logs/log_test.txt"
 					layout="${longdate} [${processid}@${machinename}] ${callsite} ${level:uppercase=true}: ${message}" />
 		</targets>
 		<rules>
-			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.Vehicle" minlevel="Info" writeTo="ConsoleLogger" />
-			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.Clutch" minlevel="Info" writeTo="ConsoleLogger" />
-			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.AxleGear" minlevel="Info" writeTo="ConsoleLogger" />
-			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.Driver" minlevel="Debug" writeTo="ConsoleLogger" />
+			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.Vehicle" minlevel="Info"
+					writeTo="ConsoleLogger,LogFile" />
+			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.Clutch" minlevel="Info"
+					writeTo="ConsoleLogger,LogFile" />
+			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.AxleGear" minlevel="Info"
+					writeTo="ConsoleLogger,LogFile" />
+			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.Driver" minlevel="Debug"
+					writeTo="ConsoleLogger,LogFile" />
 		</rules>
 	</nlog>
 </configuration>
