--- a/VectoCoreTest/app.config
+++ b/VectoCoreTest/app.config
@@ -31,7 +31,7 @@
 		<rules>
 			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.Vehicle" minlevel="Info" writeTo="ConsoleLogger" />
 			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.Clutch" minlevel="Info" writeTo="ConsoleLogger" />
-			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.AxleGear" minlevel="Info" writeTo="ConsoleLogger" />
+			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.AxleGearData" minlevel="Info" writeTo="ConsoleLogger" />
 			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.Driver" minlevel="Debug" writeTo="ConsoleLogger" />
 		</rules>
 	</nlog>
