--- a/VectoCoreTest/app.config
+++ b/VectoCoreTest/app.config
@@ -29,14 +29,17 @@
 					layout="${longdate} [${processid}@${machinename}] ${callsite} ${level:uppercase=true}: ${message}" />
 		</targets>
 		<rules>
-			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.Vehicle" minlevel="Info"
-					writeTo="ConsoleLogger,LogFile" />
-			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.Clutch" minlevel="Info"
-					writeTo="ConsoleLogger,LogFile" />
-			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.AxleGear" minlevel="Info"
-					writeTo="ConsoleLogger,LogFile" />
-			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.Driver" minlevel="Debug"
-					writeTo="ConsoleLogger,LogFile" />
+			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.Vehicle" minlevel="Info" writeTo="ConsoleLogger" />
+			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.Clutch" minlevel="Info" writeTo="ConsoleLogger" />
+			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.AxleGear" minlevel="Info" writeTo="ConsoleLogger" />
+			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.Driver" minlevel="Debug" writeTo="ConsoleLogger" />
+
+			<!--
+			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.Vehicle" minlevel="Info" writeTo="LogFile" />
+			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.Clutch" minlevel="Info" writeTo="LogFile" />
+			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.AxleGear" minlevel="Info" writeTo="LogFile" />
+			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.Driver" minlevel="Debug" writeTo="LogFile" />
+			-->
 		</rules>
 	</nlog>
 </configuration>
