--- a/VectoCoreTest/app.config
+++ b/VectoCoreTest/app.config
@@ -1,35 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <configuration>
-	<configSections>
-		<sectionGroup name="common">
-			<section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
-		</sectionGroup>
-		<section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
-	</configSections>
-	<runtime>
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-3.2.0.0" newVersion="3.2.0.0" />
-			</dependentAssembly>
-		</assemblyBinding>
-	</runtime>
-	<common>
-		<logging>
-			<factoryAdapter type="Common.Logging.NLog.NLogLoggerFactoryAdapter, Common.Logging.NLog31">
-				<arg key="configType" value="INLINE" />
-			</factoryAdapter>
-		</logging>
-	</common>
-	<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-		<targets>
-			<target xsi:type="Console" name="ConsoleLogger" error="true" />
-			<target xsi:type="File" name="LogFile" filename="${basedir}/logs/log.txt"
-					layout="${longdate} [${processid}@${machinename}] ${callsite} ${level:uppercase=true}: ${message}" />
-		</targets>
-		<rules>
-			<logger name="*" minlevel="Info" writeTo="LogFile" />
-		</rules>
-	</nlog>
+  <configSections>
+	<section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
+  </configSections>
+  <startup>
+	<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
+      autoReload="true"
+      throwExceptions="false"
+      internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log" >
+	<targets>
+	  <target xsi:type="Console" name="ConsoleLogger" error="true" />
+	  <target xsi:type="File" name="LogFile" fileName="${basedir}/logs/log.txt" layout="${longdate} [${processid}@${machinename}] ${callsite} ${level:uppercase=true}: ${message}" />
+	</targets>
+	<rules>
+	  <logger name="*" minlevel="Info" writeTo="LogFile" />
+	</rules>
+  </nlog>
 </configuration>
