console: added additional verbose modes -v, -vv, -vvv

--- a/VectoCoreTest/app.config
+++ b/VectoCoreTest/app.config
@@ -14,7 +14,7 @@
       internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log" >
 	<targets>
 	  <target xsi:type="Console" name="ConsoleLogger" error="true" />
-	  <target xsi:type="File" name="LogFile" fileName="${basedir}/logs/log.txt" layout="${longdate} [${processid}@${machinename}] ${callsite} ${level:uppercase=true}: ${message}" />
+	  <target xsi:type="File" name="LogFile" fileName="${basedir}/logs/log.txt" layout="${longdate} ${callsite:includeSourcePath=false:cleanNamesOfAnonymousDelegates=true} ${level:uppercase=true}: ${message}" />
 	</targets>
 	<rules>
 	  <logger name="*" minlevel="Info" writeTo="LogFile" />
