--- a/VectoConsole/App.config
+++ b/VectoConsole/App.config
@@ -13,11 +13,10 @@
       throwExceptions="false"
       internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log" >
 	<targets>
-	  <target xsi:type="Console" name="ConsoleLogger" error="true" />
-	  <target xsi:type="File" name="LogFile" fileName="${basedir}/logs/log.txt" layout="${longdate} [${processid}@${machinename}] ${callsite} ${level:uppercase=true}: ${message}" />
+	  <target xsi:type="Console" name="Console" error="true" />
+	  <target xsi:type="File" name="File" fileName="${basedir}/log.txt" layout="${longdate} ${callsite:includeSourcePath=false:cleanNamesOfAnonymousDelegates=true} ${level:uppercase=true}: ${message}" />
 	</targets>
 	<rules>
-	  <logger name="*" minlevel="Info" writeTo="LogFile" />
 	</rules>
   </nlog>
 </configuration>
