adding debug statements

--- a/VectoCoreTest/app.config
+++ b/VectoCoreTest/app.config
@@ -20,6 +20,7 @@
 		</targets>
 		<rules>
 			<logger name="*" minlevel="Info" writeTo="LogFile" />
+			<logger name="TUGraz.VectoCore.Models.SimulationComponent.Impl.*" minlevel="Debug" writeTo="LogFile" />
 		</rules>
 	</nlog>
 </configuration>
