--- a/VectoCoreTest/app.config
+++ b/VectoCoreTest/app.config
@@ -13,7 +13,7 @@
 		autoReload="true"
 		throwExceptions="false"
 		internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
-		<targets>
+		<targets async="true">
 			<target xsi:type="Console" name="ConsoleLogger" error="true" />
 			<target xsi:type="File" name="LogFile" fileName="${basedir}/logs/log.txt"
 					layout="${longdate} [${processid}@${machinename}] ${callsite} ${level:uppercase=true}: ${message}" />
