--- a/VectoCoreTest/VectoCoreTest.csproj
+++ b/VectoCoreTest/VectoCoreTest.csproj
@@ -62,7 +62,8 @@
     <Compile Include="FileIO\JsonTest.cs" />
     <Compile Include="FileIO\SimulationDataReaderTest.cs" />
     <Compile Include="Integration\CoachPowerTrain.cs" />
-    <Compile Include="Integration\DriverStrategy\DriverStrategyTest.cs" />
+    <Compile Include="Integration\DriverStrategy\DriverStrategyTestCoach.cs" />
+    <Compile Include="Integration\DriverStrategy\DriverStrategyTestTruck.cs" />
     <Compile Include="Integration\EngineOnlyCycle\EngineOnlyCycleTest.cs" />
     <Compile Include="Integration\SimpleDrivingCycles.cs" />
     <Compile Include="Integration\SimulationRuns\FullPowertrain.cs" />
@@ -140,6 +141,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="TestData\Components\12t Delivery Truck.vveh">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="TestData\Components\Axle 40t Truck.vtlm">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="TestData\Components\Gearbox.vfld">
