--- a/VectoCoreTest/app.config
+++ b/VectoCoreTest/app.config
@@ -16,7 +16,7 @@
 		<targets async="true">
 			<target xsi:type="Console" name="ConsoleLogger" error="true" />
 			<target xsi:type="File" name="LogFile" fileName="${basedir}/logs/log.txt"
-					layout="${longdate} [${processid}@${machinename}] ${callsite} ${level:uppercase=true}: ${message}" />
+					layout="${longdate} [${processid}:${threadid}@${machinename}] ${callsite} ${level:uppercase=true}: ${message}" />
 		</targets>
 		<rules>
 			<logger name="*" minlevel="Info" writeTo="LogFile" />
