--- a/VECTO/VECTO.vbproj
+++ b/VECTO/VECTO.vbproj
@@ -97,9 +97,8 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
-    <Reference Include="vectolic, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\vectolic.dll</HintPath>
+    <Reference Include="vectolic">
+      <HintPath>.\vectolic.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -431,6 +430,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\F_VECTO.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
