--- a/VectoConsole/App.config
+++ b/VectoConsole/App.config
@@ -19,7 +19,7 @@
 					layout="${longdate} [${processid}:${threadid}@${machinename}] ${callsite} ${level:uppercase=true}: ${message}" />
 		</targets>
 		<rules>
-			<logger name="*" minlevel="Info" writeTo="LogFile" />
+			<logger name="*" minlevel="Warn" writeTo="LogFile" />
 		</rules>
 	</nlog>
 </configuration>
