--- a/VectoConsole/App.config
+++ b/VectoConsole/App.config
@@ -15,7 +15,7 @@
 		internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
 		<targets>
 			<target xsi:type="Console" name="ConsoleLogger" error="true" />
-			<target xsi:type="File" name="LogFile" fileName="${basedir}/logs/log.txt"
+			<target xsi:type="File" name="LogFile" fileName="${basedir}/logs/log_${threadid}.txt"
 					layout="${longdate} [${processid}:${threadid}@${machinename}] ${callsite} ${level:uppercase=true}: ${message}" />
 		</targets>
 		<rules>
